# ARTQ

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
KDE/share/ECM/cmake/: ECMConfigVersion.cmake
docs/: LICENSE  build.txt
include/AppCore/: AppCore.h
include/DockWindow/: FileBrowser.h
include/MainWindow/: MainWindow.h
include/Utils/: GlobalConfig.h  StringUtil.h
libs/: CMakeLists.txt
libs/AppCore/: AppCore.cpp  CMakeLists.txt
libs/DockWindow/: CMakeLists.txt  FileBrowser.cpp
libs/MainWindow/: CMakeLists.txt  MainWindow.cpp
libs/Utils/: CMakeLists.txt  GlobalConfig.cpp  StringUtil.cpp
res/qml/: main.qml
res/qml/Window/: FileBrowserDock.qml  MainWindow.qml
